2003-02-07  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-runtime.c (fixup): Correct typo in version index computation.
	(profile_fixup): Likewise.

2002-11-24  Robert Love  <rml@tech9.net>

	* posix/sched.h: Second parameter of sched_setaffinity and
	sched_getaffinity is `unsigned int', not `unsigned long'.
	* sysdeps/generic/sched_setaffinity.c: Likewise.
	* sysdeps/generic/sched_getaffinity.c: Likewise.

2003-02-05  Ulrich Drepper  <drepper@redhat.com>

	* debug/catchsegv.sh: Fix typo in error messsage.
	Reported by John Levon <levon@movementarian.org>.

	* sysdeps/unix/sysv/linux/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/syscalls.list: Add posix_fadvise64 syscall.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/syscalls.list: Likewise.

	* libio/putwc_u.c: Use _IO_putwc_unlocked, not _IO_putc_unlocked.
	Patch by Moritz Schulte <moritz@duesseldorf.ccc.de>.

2003-02-05  Jim Meyering  <jim@meyering.net>

	Fix a heap-corrupting bug.
	* io/ftw.c: Include <limits.h>.
	(PATH_MAX) [!defined PATH_MAX]: Define to 1024.
	(process_entry): Allocate enough space to hold the resulting
	file name.  Don't presume that 2*dirbufsize is enough.
	(ftw_startup): Always use PATH_MAX to compute buffer size, now that
	it is guaranteed to be defined.

2003-02-04  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile: Add rules to build and run bug-iconv3.
	* iconvdata/bug-iconv3.c: New file.

2003-02-04  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/system.c: New file.

2003-02-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/elf/configure.in (BROKEN_SPARC_WDISP22): New
	check.
	* config.h.in (BROKEN_SPARC_WDISP22): Add.

2003-02-03  Ulrich Drepper  <drepper@redhat.com>
